consistently use lower case

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div id="chiming" class="menu-container">
         <a href="#" id="chimebtn">&#128365;</a>
         <div id="chimesetup" class="menu-box">
-          <h3>Clock chiming</h3>
+          <h3>clock chiming</h3>
           <a href="#" id="chimeMode0">turned off</a><br/>
           <a href="#" id="chimeMode1">every hour</a><br/>
           <a href="#" id="chimeMode2">every half hour</a><br/>
@@ -22,11 +22,11 @@
       <div id="menu" class="menu-container">
         <a href="#" id="menubtn">&#x2261;</a>
         <div id="menupopup" class="menu-box">
-          <h3>Options</h3>
+          <h3>options</h3>
           <label>
-            <input type="color" id="oncolor"> ON LED</label><br/>
+            <input type="color" id="oncolor"> on LED</label><br/>
           <label>
-            <input type="color" id="offcolor"> OFF LED</label><br/>
+            <input type="color" id="offcolor"> off LED</label><br/>
           <label>
             <input type="color" id="bgcolor"> background</label><br/>
           <a href="#" id="reset">restore defaults</a><br/>
