--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <body>
     <div id="root-container">
       <canvas id="clock"></canvas>
-      <div id="chiming" class="menu-container">
-        <a href="#" id="chimebtn">&#128365;</a>
-        <div id="chimesetup" class="menu-box">
-          <h3>clock chiming</h3>
-          <a href="#" id="chimeMode0">turned off</a><br/>
-          <a href="#" id="chimeMode1">every hour</a><br/>
-          <a href="#" id="chimeMode2">every half hour</a><br/>
-          <a href="#" id="chimeMode3">every quarter hour</a><br/>
-          <a href="#" id="chimeMode4">every minute</a><br/>
+      <div id="sound" class="menu-container">
+        <a href="#" id="soundbtn">🕪</a>
+        <div id="soundsetup" class="menu-box">
+          <h3>clock sound</h3>
+          <a href="#" id="soundModeOff">turned off</a><br/>
+          <a href="#" id="soundModeHour">every hour</a><br/>
+          <a href="#" id="soundModeHalfHour">every half hour</a><br/>
+          <a href="#" id="soundModeQuarterHour">every quarter hour</a><br/>
+          <a href="#" id="soundModeMinute">every minute</a><br/>
         </div>
       </div>
       <div id="menu" class="menu-container">
@@ -45,7 +45,7 @@
     </div>
   </body>
   <script src="scripts/clock.js"></script>
-  <script src="scripts/chiming.js"></script>
+  <script src="scripts/sound.js"></script>
   <script src="scripts/sync.js"></script>
   <script src="scripts/base.js"></script>
   <script src="scripts/local.js"></script>
