sound mode -> sound interval

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
       <div id="sound" class="menu-container">
         <a href="#" id="soundbtn">🕪</a>
         <div id="soundsetup" class="menu-box">
-          <h3>clock sound</h3>
-          <a href="#" id="soundModeOff">turned off</a><br/>
-          <a href="#" id="soundModeHour">every hour</a><br/>
-          <a href="#" id="soundModeHalfHour">every half hour</a><br/>
-          <a href="#" id="soundModeQuarterHour">every quarter hour</a><br/>
-          <a href="#" id="soundModeMinute">every minute</a><br/>
+          <h3>sound interval</h3>
+          <a href="#" id="soundIntervalOff">turned off</a><br/>
+          <a href="#" id="soundIntervalHour">every hour</a><br/>
+          <a href="#" id="soundIntervalHalfHour">every half hour</a><br/>
+          <a href="#" id="soundIntervalQuarterHour">every quarter hour</a><br/>
+          <a href="#" id="soundIntervalMinute">every minute</a><br/>
         </div>
       </div>
       <div id="menu" class="menu-container">
