improve clock and logo positioning

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <body>
     <div id="root-container">
       <canvas id="clock"></canvas>
+      <div id="logo-container">
+        <img class="logo" src="" alt="custom logo"/>
+      </div>
       <div id="sound" class="menu-container">
         <a href="#" id="soundbtn">🕪</a>
         <div id="soundsetup" class="menu-box">
@@ -41,7 +44,6 @@
           </div>
         </div>
       </div>
-      <img class="logo" src="" alt="custom logo"/>
     </div>
   </body>
   <script src="scripts/clock.js"></script>
