wip first roughly working version of talk mode

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
           <a href="#" id="soundIntervalHalfHour">every half hour</a><br/>
           <a href="#" id="soundIntervalQuarterHour">every quarter hour</a><br/>
           <a href="#" id="soundIntervalMinute">every minute</a><br/>
+          <h3>sound type</h3>
+          <a href="#" id="soundTypeBeep">beep</a><br/>
+          <a href="#" id="soundTypeTalk">talk</a><br/>
         </div>
       </div>
       <div id="menu" class="menu-container">
@@ -39,7 +42,7 @@
           <label>
             <input type="checkbox" id="autosync"> on-line sync</label><br/>
           <div>
-            current offset: <span id="offset">0</span> ms,<br/>
+            current offset: <span id="offset">0</span> ms<br/>
             last sync: <span id="syncstatus">N/A</span>
           </div>
         </div>
