wip: add intervals 5' and 10', simplified and cleaned up audio scheduling

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
           <a href="#" id="soundIntervalHour">every hour</a><br/>
           <a href="#" id="soundIntervalHalfHour">every half hour</a><br/>
           <a href="#" id="soundIntervalQuarterHour">every quarter hour</a><br/>
+          <a href="#" id="soundIntervalTenMinutes">every 10'</a><br/>
+          <a href="#" id="soundIntervalFiveMinutes">every 5'</a><br/>
           <a href="#" id="soundIntervalMinute">every minute</a><br/>
           <h3>sound type</h3>
           <a href="#" id="soundTypeBeep">beep</a><br/>
